minor fixes & hide scrollbar

--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -11,6 +11,11 @@ body
     background-color: #28282F
     color: #f0f0f0
     min-height: 100%
+    -ms-overflow-style: none
+    scrollbar-width: none
+
+body::-webkit-scrollbar
+    display: none
 
 .container
     display: flex
