--- a/sass/_media-queries.sass
+++ b/sass/_media-queries.sass
@@ -258,6 +258,8 @@
 @media screen and (min-height: 1080px)
     .contact-section
         width: 77%
+        margin-right: auto
+        margin-left: auto
 
 @media screen and (min-width: 601px)
     .contact-section
